# effective-octo-potato

./: .gitignore  Readme.md  environment.yml  pyproject.toml  requirements_cpu.txt  ruff.toml
data/: test.csv
notebook/: train_first_example.py
scripts/: baseline.py  baseline_subscription.py  create_framewise_data_overview.py  graph_baseline.py  identify_node_bodyparts.py
src/effective_octo_potato/: __init__.py  _models.py  _split_train_test.py  data.py  evaluation.py  feature_generator.py  graph_utils.py  kaggle.py  models.py  temporal_feature_generator.py  tranforms.py  transforms.py  utils.py
src/effective_octo_potato/learn_submission/: copy_of_notebook.py
tests/effective_octo_potato/: test_data.py  test_graph_utils.py
