[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "effective_octo_potato"
authors = [
    {name = "Christian Reimers"},
    {name = "Michael Niebisch"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "torch",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = []
test = ["pytest"]

[tool.mypy]
disallow_untyped_defs = true
pretty = true
show_absolute_path = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
error_summary = true
files = "src"
allow_redefinition = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
